# BitmapCompressor

ImageCompressor/: CMakeLists.txt  ImageCompressor.cpp
ImageCompressorApp/: CMakeLists.txt  FileInfo.h  FilesModel.cpp  FilesModel.h  ImageHandler.cpp  ImageHandler.h  main.cpp  main.qml
ImageCompressorApp/libs/header/: ImageCompressor.h
